@@ -22,6 +22,7 @@
         <field key="notes" dbtype="text" phptype="string" null="true" />
         <field key="active" dbtype="tinyint" precision="1" attributes="unsigned" phptype="boolean" null="false" default="0" index="index" />
         <field key="last_activity" dbtype="datetime" phptype="datetime" null="true" />
+        <field key="data" dbtype="mediumtext" phptype="json" />
 
         <index alias="bangroup" name="bangroup" primary="false" unique="false" type="BTREE">
             <column key="bangroup" length="" collation="A" null="false" />
