@@ -2,6 +2,8 @@ Changelog for Rampart.
 
 Rampart 1.1.0
 ==============
+- [#5123] Add more verbose message for blacklisted users
+- [#5122] Add ban response data storage for ProjectHoneyPot
 - Add WhiteList support
 - Add ProjectHoneyPot DNS blacklist integration
 
